--- a/source/CopyItemDatasourceUpdater.csproj
+++ b/source/CopyItemDatasourceUpdater.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A967F709-7ED1-4278-AB8F-0447FF405AD0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>CopyItemDatasourceUpdater</RootNamespace>
+    <AssemblyName>CopyItemDatasourceUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pipeline\CopyItemUpdateDatasource.cs" />
+    <Compile Include="Classes\CopyItemUpdateDatasource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
